--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
     --bg-header: rgb(201, 201, 201);
 }
 
+.bg-header {
+    background-color: var(--bg-header);
+}
 
 .bg-textarea {
     background-color: rgb(237, 240, 243);
@@ -27,18 +30,7 @@
 
 #hamburger-menue {
     z-index: 1;
-
-    &::after {
-
-        content: '';
-        position: absolute;
-        width: 60px;
-        height: 46px;
-        top: -9px;
-        left: -15px;
-        background-color: rgb(130, 131, 138);
-        z-index: -1;
-    }
+    background-color: rgb(130, 131, 138);
 }
 
 .focus-ring {
@@ -59,7 +51,7 @@
         --bg-header: rgb(41, 41, 41);
     }
 
-    #hamburger-menue::after {
+    #hamburger-menue {
         background-color: rgb(90, 90, 90);
     }
 }
