--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+  --bg-textarea: rgb(240, 240, 240);
+  --bg-display-name: rgb(221, 221, 221);
+  --bg-header: rgb(201, 201, 201);
+
 }
 
 html {
@@ -66,9 +70,80 @@ button {
   }
 }
 
+.bg-header {
+  background-color: var(--bg-header);
+}
+
+.bg-textarea {
+  background-color: rgb(237, 240, 243);
+}
+
+@keyframes morph {
+
+  0%,
+  100% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(0.9);
+  }
+}
+
+.animate-morph:active {
+  animation: morph 0.1s 1;
+}
+
+@keyframes popup {
+
+  0%,
+  100% {
+    z-index: 1;
+    bottom: -5rem;
+    opacity: 0;
+    display: none;
+  }
+
+  5%,
+  95% {
+    z-index: 1;
+    bottom: 1.25rem;
+    opacity: 100%;
+  }
+}
+
+.popup {
+  animation: popup 2000ms 1 linear;
+}
+
+#hamburger-menue {
+  z-index: 1;
+  background-color: rgb(130, 131, 138);
+}
+
+.focus-ring {
+  outline: 2px solid rgb(85, 138, 236);
+  outline-offset: 4px;
+
+  &:focus {
+    outline: 2px solid rgb(85, 138, 236);
+    outline-offset: 4px;
+  }
+
+}
 
 @media(prefers-color-scheme:dark) {
+  :root {
+    --bg-textarea: rgb(12, 12, 14);
+    --bg-display-name: rgb(27, 27, 27);
+    --bg-header: rgb(41, 41, 41);
+  }
+
   body {
     color: white;
+  }
+
+  #hamburger-menue {
+    background-color: rgb(90, 90, 90);
   }
 }
